Added skipping ids properties to queries; optimized SearchBars
